--- a/.github/workflows/xen.yml
+++ b/.github/workflows/xen.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   xen_deb:
-    runs-on: xensifter
+    runs-on: ubuntu-latest
     container:
       image: ubuntu:22.04
     steps:
@@ -99,9 +99,9 @@ jobs:
       contents: write
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     needs: xen_deb
-    runs-on: xensifter
+    runs-on: ubuntu-latest
     container:
-      image: ubuntu:22.04
+      mage: ubuntu:22.04
     outputs:
       version: ${{ steps.get_version.outputs.version }}
     steps:
