docs: fix publishing docs

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -56,7 +56,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: xensifter
+    runs-on: ubuntu-latest
     needs: [build]
     steps:
       - name: Checkout
