ci: reenable python 3.13 build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        # TODO: 'python:3.12.4-bullseye'
-        # only release for pypy as it's faster anyway
-        baseimage: ['pypy:3.11-7-slim-bookworm']
+        baseimage: ['python:3.13.2-slim-bookworm', 'pypy:3.11-7-slim-bookworm']
     steps:
       - uses: actions/checkout@v4
         with:
