ci: trigger xen workflow when file is modified

--- a/.github/workflows/xen.yml
+++ b/.github/workflows/xen.yml
@@ -4,12 +4,14 @@ on:
     branches:
       - main
     paths:
+      - '.github/workflows/xen.yml'
       - 'patches/**'
       - '.gitmodules'
     tags:
       - 'v*'
   pull_request:
     paths:
+      - '.github/workflows/xen.yml'
       - 'patches/**'
       - '.gitmodules'
 
